# llmockapi

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yml
.opencode/: opencode.json
src/llmockapi/: __init__.py  chat_template.html  client.py  config.py  internal_route.py  middleware.py
tests/: conftest.py  test_client.py  test_config.py  test_integration.py  test_internal_route.py  test_middleware.py
tests/mocks/: api_specs.json
