[project]
name = "llmockapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rbs392", email = "rbs392@yahoo.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi[uvicorn]>=0.128.0",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
llmockapi = "llmockapi:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
